--- a/intercloud-webapp/pom.xml
+++ b/intercloud-webapp/pom.xml
@@ -164,6 +164,12 @@
 			<version>1.2.17</version>
 		</dependency>
 
+		<dependency>
+			<groupId>xml-apis</groupId>
+			<artifactId>xml-apis</artifactId>
+			<version>1.4.01</version>
+		</dependency>
+
 		<!-- TEST -->
 		<dependency>
 			<groupId>com.carrotsearch</groupId>
